--- a/txt.html
+++ b/txt.html
@@ -5,19 +5,19 @@
     <title>Broadway</title>
   </head>
   <body>
-    <h1>Broadway Design</h1>
+    <h1 id="home">Broadway Design</h1>
 
     <!--Links-->
     <div class="link">
-    <p><a href="#">Home</a></p>
-    <p><a href="#">Process</a></p>
-    <p><a href="#">Work</a></p>
-    <p><a href="#">Team</a></p>
-    <p><a href="#">Contact</a></p>
+    <p><a href="#home">Home</a></p>
+    <p><a href="#process">Process</a></p>
+    <p><a href="#work">Work</a></p>
+    <p><a href="#team">Team</a></p>
+    <p><a href="#contact">Contact</a></p>
     </div>
     <!--Links-->
     <!-- Our Process -->
-    <h2>Our Process</h2>
+    <h2 id="process">Our Process</h2>
 
     <img src="resources/images/identify.svg" alt="Identify">
     <h3>Identify</h3>
@@ -34,18 +34,18 @@
     <!-- Designed in New York -->
     <h3>Designed in New York</h3>
 
-    <h3>Portfolio</h3>
+    <h3 id="work">Portfolio</h3>
     <p>Coming Soon</p>
 
-    <h3>Team</h3>
+    <h3 id="team">Team</h3>
     <p>We're Hiring!</p>
 
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
     <!-- Designed in New York -->
     <!-- Footer/Links -->
-    <p><span class="copyright">© Broadway 2017</span> <a href="#home">Home</a> <a href="#about">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
+    <p><span class="copyright">© Broadway 2017</span> <a href="#home">Home</a> <a href="#team">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
   </body>
 </html>
