classes & ids established

--- a/txt.html
+++ b/txt.html
@@ -5,7 +5,7 @@
     <title>Broadway</title>
   </head>
   <body>
-    <h1 id="home">Broadway Design</h1>
+    <h1 class="main--head"id="home">Broadway Design</h1>
 
     <!--Links-->
     <div class="link">
@@ -17,35 +17,35 @@
     </div>
     <!--Links-->
     <!-- Our Process -->
-    <h2 id="process">Our Process</h2>
+    <h2 class="sub--head" id="process">Our Process</h2>
 
     <img src="resources/images/identify.svg" alt="Identify">
-    <h3>Identify</h3>
+    <h3 class="heading">Identify</h3>
     <p>We focus on the most important details.</p>
 
     <img src="resources/images/understand.svg" alt="Understand">
-    <h3>Understand</h3>
+    <h3 class="heading">Understand</h3>
     <p>We study our projects inside and out</p>
 
     <img src="resources/images/execute.svg" alt="Execute">
-    <h3>Execute</h3>
+    <h3 class="heading">Execute</h3>
     <p>We put everything we have into our work.</p>
     <!-- Our Process -->
     <!-- Designed in New York -->
-    <h3>Designed in New York</h3>
+    <h3 class="heading">Designed in New York</h3>
 
-    <h3 id="work">Portfolio</h3>
+    <h3 class="heading" id="work">Portfolio</h3>
     <p>Coming Soon</p>
 
-    <h3 id="team">Team</h3>
+    <h3 class="heading" id="team">Team</h3>
     <p>We're Hiring!</p>
 
-    <h3 id="contact">Contact</h3>
+    <h3 class="heading" id="contact">Contact</h3>
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
     <!-- Designed in New York -->
     <!-- Footer/Links -->
-    <p><span class="copyright">© Broadway 2017</span> <a href="#home">Home</a> <a href="#team">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
+    <p><span class="copyright">© Broadway 2017</span> <a class="link" href="#home">Home</a> <a class="link" href="#team">About</a> <a class="link" href="#work">Work</a> <a class="link" href="#team">Team</a> <a class="link" href="#contact">Contact</a></p>
   </body>
 </html>
