--- a/txt.html
+++ b/txt.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
+    <link rel="stylesheet" href="/resources/style.css">
   </head>
   <body>
     <h1 class="main--head"id="home">Broadway Design</h1>
