background images paths set

--- a/txt.html
+++ b/txt.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="/resources/style.css">
   </head>
   <body>
-    <h1 class="main--head"id="home">Broadway Design</h1>
+    <div class="background--image">
+     <h1 class="main--head"id="home">Broadway Design</h1>
 
     <!--Links-->
-    <div class="link">
-    <p><a href="#home">Home</a></p>
-    <p><a href="#process">Process</a></p>
-    <p><a href="#work">Work</a></p>
-    <p><a href="#team">Team</a></p>
-    <p><a href="#contact">Contact</a></p>
+     <div class="link">
+     <p><a href="#home">Home</a></p>
+     <p><a href="#process">Process</a></p>
+     <p><a href="#work">Work</a></p>
+     <p><a href="#team">Team</a></p>
+     <p><a href="#contact">Contact</a></p>
+     </div>
     </div>
     <!--Links-->
     <!-- Our Process -->
@@ -33,7 +35,7 @@
     <p>We put everything we have into our work.</p>
     <!-- Our Process -->
     <!-- Designed in New York -->
-    <h3 class="heading">Designed in New York</h3>
+    <h3 class="heading" id="background--image">Designed in New York</h3>
 
     <h3 class="heading" id="work">Portfolio</h3>
     <p>Coming Soon</p>
