--- a/txt.html
+++ b/txt.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link rel="stylesheet" href="/resources/style.css">
+    <link rel="stylesheet" href="resources/style.css">
   </head>
   <body>
     <div class="background--image">
