--- a/txt.html
+++ b/txt.html
@@ -10,13 +10,11 @@
      <h1 class="main--head"id="home">Broadway Design</h1>
 
     <!--Links-->
-     <div class="link">
-     <p><a href="#home">Home</a></p>
-     <p><a href="#process">Process</a></p>
-     <p><a href="#work">Work</a></p>
-     <p><a href="#team">Team</a></p>
-     <p><a href="#contact">Contact</a></p>
-     </div>
+     <p><a class="link" href="#home">Home</a></p>
+     <p><a class="link" href="#process">Process</a></p>
+     <p><a class="link" href="#work">Work</a></p>
+     <p><a class="link" href="#team">Team</a></p>
+     <p><a class="link" href="#contact">Contact</a></p>
     </div>
     <!--Links-->
     <!-- Our Process -->
@@ -35,7 +33,7 @@
     <p>We put everything we have into our work.</p>
     <!-- Our Process -->
     <!-- Designed in New York -->
-    <h3 class="heading" id="background--image">Designed in New York</h3>
+    <h3 class="heading1" id="background--image">Designed in New York</h3>
 
     <h3 class="heading" id="work">Portfolio</h3>
     <p>Coming Soon</p>
@@ -49,6 +47,6 @@
     <p>Twitter: @test</p>
     <!-- Designed in New York -->
     <!-- Footer/Links -->
-    <p><span class="copyright">© Broadway 2017</span> <a class="link" href="#home">Home</a> <a class="link" href="#team">About</a> <a class="link" href="#work">Work</a> <a class="link" href="#team">Team</a> <a class="link" href="#contact">Contact</a></p>
+    <p id="background--image" class="align--left"><span class="copyright">© Broadway 2017</span> <a class="link" href="#home">Home</a> <a class="link" href="#team">About</a> <a class="link" href="#work">Work</a> <a class="link" href="#team">Team</a> <a class="link" href="#contact">Contact</a></p>
   </body>
 </html>
